[package]
name = "redgold-schema"
version = "0.1.5"
edition = "2021"
authors = ["Redgold"]
description = "A relative proof conflict resolution & irreversibility service with trust modeling custodial pooling and executor contracts"
documentation = "https://dev.docs.redgold.io/"
readme = "README.md"
homepage = "https://redgold.io"
repository = "https://github.com/redgold-io/redgold"
license = "MIT"
keywords = ["crypto", "cryptocurrency", "reputation", "decentralized", "p2p"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
sha3 = "0.10.8"
prost = "0.8"
serde_json = "1.0.59"
serde_with = { version = "1.10.0", features = ["hex"] }
hdpath = { version = "0.6.2"}
hex = "0.4.3"
bitcoin-wallet = "1.1.0"
rust-crypto = "0.2.36"
itertools = "0.10.1"
strum = "0.21"
strum_macros = "0.25"
backtrace = "0.3.65"
anyhow = "1"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
csv = "1.1"
serde = { version = "1.0.130", features = ["default", "derive"] }
prost-helper = "0.2.0"
num-traits = "0.2.15"
# TODO: Change to feature only for not including in WASM
tokio = { version = "1.0.0", features = ["rt"] }
bdk = {package="bdk-debug", version = "0.28.1-debug", features = ["default", "keys-bip39", "bip39"]}
#
#[patch.crates-io]
#miniscript = { version = "10.0.0" }

[dependencies.bitcoin]
version = "0.21"
features = ["serde", "bitcoinconsensus"]

[build-dependencies]
prost-build = "0.8"
prost-serde = "0.2.0"
prost-helper = "0.2.0"
serde = "1.0.130"
serde_json = "1.0.59"
num-traits = "0.2.15"

[profile.release]
codegen-units=1