[package]
name = "redgold-sdk-client"
version = "0.1.33"
edition = "2021"
authors = ["Redgold"]
description = "p2p database / compute engine & portfolio target models"
documentation = "https://dev.docs.redgold.io/"
readme = "../README.md"
homepage = "https://redgold.io"
repository = "https://github.com/redgold-io/redgold"
license = "MIT"
keywords = ["crypto", "cryptocurrency", "reputation", "decentralized", "p2p"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
redgold-schema = { workspace = true }
