[package]
name = "redgold-sdk"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "0.3.3"
serde = "1.0.163"
redgold-schema = { path = "../schema", version = "0.1.6" }
#redgold-schema = {workspace = true, features = []}

[lib]
crate_type = ["cdylib"]
