[package]
name = "redgold-common-no-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
redgold-schema = {workspace = true}
redgold-common = {workspace = true}
async-trait = { workspace = true }
flume = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
arc-swap = {workspace = true}