[package]
name = "redgold-daq"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
redgold-schema = { workspace = true}
redgold-data = { workspace = true}
redgold-keys = { workspace = true}
redgold-executor = { workspace = true}
redgold-common-no-wasm = { workspace = true}
redgold-rpc-integ = { workspace = true}
tokio = {workspace = true}
arc-swap = {workspace = true}
futures = {workspace = true}
metrics = {workspace = true}
async-trait = { workspace = true }
tokio-stream = { workspace = true }
