[package]
name = "redgold-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = [ "runtime-tokio-native-tls" , "sqlite"] } # Tokio:
redgold-schema = { workspace = true }
redgold-common-no-wasm = { workspace = true }
redgold-keys = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
futures = {workspace = true}
async-trait = {workspace = true}
polars = { features = ["parquet"], version = "0.38.3" }
chrono = "0.4.35"
toml = {workspace = true}
tokio = { version = "1.36.0", features = ["rt", "process"]}

[build-dependencies]
sqlx = { version = "0.7.2", features = [ "runtime-tokio-native-tls" , "sqlite"] } # Tokio:
tokio = { workspace = true }
rusqlite = "0.29.0"
dirs = {workspace = true}