[package]
name = "redgold-keys"
version = {  workspace = true }
edition = {  workspace = true }
authors = {  workspace = true }
description = {  workspace = true }
documentation = {  workspace = true }
readme = {  workspace = true }
homepage = {  workspace = true }
repository = {  workspace = true }
license = {  workspace = true }
keywords = {  workspace = true }
categories = {  workspace = true }

[dependencies]
# workspace = true caused an error here? maybe
redgold-schema = { workspace = true}
redgold-common-no-wasm = { workspace = true }
#redgold-rpc-integ = { workspace = true }
# Make all the non-WASM dependencies optional
tokio = { version = "1.36.0", features = ["rt"]}
bdk = {package="bdk-debug", version = "0.28.1-debug", features = ["default", "keys-bip39", "bip39", "sled"]}
#bdk = {package="bdk", version = "0.29.0", features = ["default", "keys-bip39", "bip39", "hardware-signer"]}
rust-crypto = { version = "0.2.36"}
hex = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
#serde_with = {workspace = true}
itertools = {workspace = true}
sha3 = {workspace = true}
ethers = "=2.0.14"
#ethers-etherscan = "2.0.13"
#foundry-block-explorers = "0.2.3"
#alloy-chains = "0.1.12"
#num-bigint = "0.4"
#num-traits = "0.2"
log = "0.4.20"
#elliptic-curve = "0.13.5"
#sha2 = "0.10.8"
#hmac = "0.12.1"
#pbkdf2 = "0.12.2"
#rand_core = "0.6.4"
monero = "0.19.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
monero-rpc = { version = "0.4.0", features = ["rpc_authentication"] }
jsonrpc-core = "18.0.0"
#chrono = "0.4.38"
reqwest = "0.11.27"
diqwest = "1.2.1"
uuid = { version = "0.8.2", features = ["v4"] }
#sequoia-openpgp = "1.21.2"
#[dependencies.bitcoin]
#version = "0.21"
#features = ["serde", "bitcoinconsensus"]
#ethereum-types = "0.14.1"

ed25519-dalek = "2.1.1"
#ed25519-dalek = "1.0.1"
curve25519-dalek = "4.1.3"


borsh = "0.10.3"  # Add this to your Cargo.toml
solana-program = "2.1.9"
solana-sdk = "2.1.9"
solana-client = "2.1.9"

metrics = {workspace = true}
regex = "1.10.6"

[target.'cfg(target_os = "linux")'.dependencies]
sequoia-openpgp = "1.21.2"


