[package]
name = "redgold-node-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
redgold-schema = { workspace = true}
redgold-data = { workspace = true}
redgold-keys = { workspace = true}
redgold-executor = { workspace = true}
redgold-common-no-wasm = { workspace = true}
redgold-rpc-integ = { workspace = true}
redgold-common = {workspace = true}
tokio = {workspace = true}
hex = {workspace = true}
serde = { workspace = true}
tracing = { workspace = true}
async-trait = {  workspace = true }
flume = {  workspace = true }
metrics = {  workspace = true }