[package]
name = "redgold-rpc-integ"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
redgold-schema = { workspace = true}
redgold-keys = { workspace = true}
redgold-common = { workspace = true}
tracing = {workspace = true}
ethers = { version = "2.0.13", features = ["ws"]}
foundry-block-explorers = "0.2.3"
alloy-chains = "0.1.12"
num-bigint = { workspace = true }
num-traits = { workspace = true }
tokio = {workspace = true}
hex = {workspace = true}
serde_json = { workspace = true }
futures = { workspace = true }
redgold-safe-bindings = {workspace = true}
#tokio-stream = { workspace = true }
#serde_arrow = { version = "0.12.3", features = ["arrow-54"] }
serde_cbor = { workspace = true }
serde = {workspace = true}
#arrow = "54.0.0"
#serde_par
bitcoincore-rpc = "0.19.0"
bitcoin = "0.32.5"
tokio-tungstenite = "0.21.0"
url = "2.5.0"

zmq = "0.10"
flume = "0.11"
