[package]
name = "redgold-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
toml = {workspace = true}
parquet_derive = {workspace = true}
sha3 = "0.10.8"
prost = "0.11.9"
prost-helper = "0.7.0"
serde = { workspace = true}
serde_json = { workspace = true}
serde_cbor = { workspace = true}
serde_with = { workspace = true}
itertools = {workspace = true}
hex = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
backtrace = "0.3.65"
anyhow = "1"
#uuid = { version = "1.3.3", features = ["serde", "v4"] }
csv = "1.1"
num-traits = "0.2.15"

#rand = { workspace = true }
num-bigint = { workspace = true }
async-trait = "0.1.78"
chrono = "0.4.33"
log = "0.4.21"
tracing = { workspace = true }
# TODO: Remove dependency
clap = { version = "4.3.21", features = ["derive", "env"] }

[target.'cfg(not(any(target_arch = "wasm32", target_os = "wasi")))'.dependencies]
tokio = { version = "1.36.0", features = ["rt", "process", "fs"]}

# TODO: Change to feature only for not including in WASM

#
## Non-WASM dependencies
#[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
#tokio = { version = "1.0.0", features = ["rt"] }
#bdk = {package="bdk-debug", version = "0.28.1-debug", features = ["default", "keys-bip39", "bip39"]}

#hdpath = { version = "0.6.2"}
#rust-crypto = "0.2.36"


#

#[patch.crates-io]
#miniscript = { version = "10.0.0" }
#
#[dependencies.bitcoin]
#version = "0.21"
#features = ["serde", "bitcoinconsensus"]

[build-dependencies]
prost-build = "0.8"
prost-serde = "0.3.0"
prost-helper = "0.2.0"
serde = "1.0.130"
serde_json = "1.0.59"
num-traits = "0.2.15"

#[profile.release]
#codegen-units=1
