[package]
name = "redgold-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "0.3.3"
serde = "1.0.163"
redgold-schema = {workspace = true }
#redgold-schema = {workspace = true, features = []}

[lib]
crate_type = ["cdylib"]
